More build fixes.